objects/OpportunityContactRole.object
<CustomObject>
    <fields>
        <fullName>ContactGUID__c</fullName>
        <formula>Contact.ContactGUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactGUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <formula>CASESAFEID( Opportunity.Event__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A backup field to record the Primary nature of the Contact- IsPrimary field not working.</description>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>CASESAFEID( Opportunity.OwnerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PURL__c</fullName>
        <formula>IF(
OR(
 ISBLANK( ContactGUID__c ),
 ISBLANK( Registered_Event_Code__c ),
 ISBLANK( Promo_Code__c ),
 CONTAINS(Promo_Code__c  , "Duplicate") 
),
Null,
$CustomMetadata.EE_PURL__mdt.http_registration_experientevent_com_s.PURL1__c &amp; Registered_Event_Code__c &amp; $CustomMetadata.EE_PURL__mdt.cg.MasterLabel &amp; ContactGUID__c &amp; $CustomMetadata.EE_PURL__mdt.marketingcode.MasterLabel &amp; Promo_Code__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Event_Code__c</fullName>
        <formula>Opportunity.Event__r.Registration_Event_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered Event Code</label>
        <type>Text</type>
    </fields>
</CustomObject>